<?xml version="1.0"?>
<package format="2">
  <name>lang_corr_msgs</name>
  <version>0.0.0</version>
  <description>The lang_corr_msgs package</description>

  <maintainer email="janne@todo.todo">janne</maintainer>
  <license>TODO</license>
  <author email="jane.doe@example.com">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
